--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,19 +1,80 @@
-.iphone-img{
-    height: 300px;
-    width: 300px;
-    /* background-image: url(/assest/MaskGroup.svg); */
+.iphone-img {
+  height: 650px;
+  width: 720px;
+ 
 }
 
-.content-name{
-    color: white;
+.content-name {
+  color: white;
 }
-.content-details{
-    color: white;
+.content-details {
+  color: white;
 }
 
-.box{
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 100px;
+  position: relative;
+}
+
+.banner-div{
+    width: 1192px;
+    height: 332px;
+    display: flex;
+ 
+   
+}
+.banner{
+position: relative;
+bottom: 150px;
+right: -130px;
+width: 100%;
+height: 100%;
+
+}
+
+.box-container{
+    background-color: #2E90E5;
     display: flex;
     justify-content: center;
-   
+    align-items: center;
+    padding: 0px 100px;
+    height: 650px;
+    margin-top: 50px;
+}
+.content-div{
+    color: white;
+}
 
+
+.information{
+    display: flex;
+    text-align: center;
+    width: 1130px;
+    margin-top: 50px;
+    position: relative;
+    right: -130px;
+  
+
+}
+.free-shipping {
+    height: 256px;
+ margin: 5px;
+ width: 33%;
+}
+.refund {
+    height: 256px;
+    margin: 5px;
+    width: 33%;
+}
+.support {
+    height: 256px;
+    margin: 5px;
+    width: 33%;
+}
+
+.MuiTabs-flexContainer{
+    justify-content: center;
 }
