--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -1,52 +1,45 @@
-.footer-top{
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    right: -130px;
-    width: 1130px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 80%;
+  margin: 15px auto 15px auto;
 }
 
-.icons{
-    display: flex;
-    justify-content: flex-start;
+.icons {
+  display: flex;
+  justify-content: flex-start;
 }
-.icons img{
-    padding: 10px;
-}
-
-.bouncer{
-    width: 270px;
-}
-.follow-us{
-    width: 270px;
-    margin-top: 20px;
-}
-.contact-us{
-    width: 270px;
-    margin-top: 20px;
-}
-.footer-bottom{
-    display: flex;
-    position: relative;
-    right: -130px;
-    width: 1130px;
-    padding: 20px 45px 0 45px;
-    margin-bottom: 15px;
+.icons img {
+  padding: 10px;
 }
 
-.footer-bottom .footer-bottom-div {
-    margin-right: 10px;
-   
+.bouncer {
+  width: 28%;
+}
+.follow-us {
+  width: 28%;
+  margin-top: 20px;
+}
+.contact-us {
+  width: 28%;
+  margin-top: 20px;
+}
+.footer-bottom {
+  display: flex;
+  position: relative;
+
+  width: 80%;
+
+  margin: 2% auto;
+
 }
 
-.cards-pay{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    right: -130px;
-    width: 1130px;
-    margin-top: 15px;
-    padding: 0 30px 0 20px;
+
+.cards-pay {
+  display: flex;
+  justify-content: space-between;
+  width: 82%;
+  margin: 0 auto;
+  margin-top: 15px;
 }
